[package]
name = "polkadex-extrinsic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"], optional = true }
parity-util-mem = { version = "0.11.0", default-features = false, features = ["primitive-types"] }
ethers-derive-eip712 = { version="0.13.0", optional=true}
ethers-core = {version="0.13.0", optional = true, features = ["eip712", "macros"]}
ethers-contract = {version="0.13.0", optional = true, features = ["abigen"]}
ethers = {version="0.13.0", optional = true}
serde_json = { version="1.0.91", optional = true , default-features = false}
hex = { version="0.4.3", optional = true, default-features = false}
sp-std = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime-interface = { workspace= true, default-features = false }
polkadex-primitives = {workspace = true, default-features = false}
sp-runtime = { default-features = false, workspace = true }
frame-support = { default-features = false, workspace = true }
parity-scale-codec = { workspace = true, default-features = false, features = ["max-encoded-len"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
sp-io = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
    "ethers-derive-eip712",
    "ethers-core",
    "ethers",
    "ethers-contract",
    "serde_json/std",
    "hex/std",
    "sp-runtime-interface/std",
    "parity-util-mem/std",
    "sp-core/std",
    "polkadex-primitives/std",
    "sp-runtime/std",
    "parity-scale-codec/std",
    "frame-support/std",
    "scale-info/std",
    "sp-io/std",
    "serde/std",
]
