[package]
name = "node-primitives"
version = "2.0.0"
authors = ["Change"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.6", default-features = false, features = ["derive"] }
frame-system = {git = 'https://github.com/paritytech/substrate.git', branch = "master", default-feature = false} #frame-system = { version = "2.0.0", default-features = false, path = "../../../frame/system" }
sp-application-crypto = {git = 'https://github.com/paritytech/substrate.git', branch = "master", default-feature = false}
sp-core = {git = 'https://github.com/paritytech/substrate.git', branch = "master", default-feature = false}
sp-runtime = {git = 'https://github.com/paritytech/substrate.git', branch = "master", default-feature = false}

[dev-dependencies]
sp-serializer = {git = 'https://github.com/paritytech/substrate.git', branch = "master", default-feature = false}
pretty_assertions = "0.6.1"

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-system/std",
    "sp-application-crypto/std",
    "sp-core/std",
    "sp-runtime/std",
]