[package]
name = "relayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpsee = { version = "0.15.1", features = ["full"]}
sp-core = { branch = "polkadot-v0.9.27", git = "https://github.com/paritytech/substrate.git", features = ["std"]}
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "full"] }
hex = "0.4.3"
async-trait = "0.1.58"
tokio = {version = "1.17.0", features = ["full"] }
polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives", tag = "polkadot-v0.9.27v0.1.11" }
serde = "1.0.137"
serde_json = "1.0.79"
anyhow = "1.0.56"
structopt = { version = "0.3"}
log = "0.4.16"
env_logger = "0.9.0"
rustc-hex = "2.1.0"
substrate-api-client = { git="https://github.com/scs/substrate-api-client.git", branch="polkadot-v0.9.27" }

