[package]
name = "node-rpc"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpc-core = "15.1.0"
node-primitives = { version = "2.0.0", path = "../primitives" }
node-runtime = { version = "2.0.0", path = "../runtime" }
pallet-contracts-rpc = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
pallet-transaction-payment-rpc = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-client-api = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-consensus-babe = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-consensus-babe-rpc = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-consensus-epochs = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-chain-spec = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-finality-grandpa = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-finality-grandpa-rpc = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-keystore = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-rpc-api = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-rpc = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-sync-state-rpc = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-api = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-block-builder = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-blockchain = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-keystore = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-consensus = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-consensus-babe = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-runtime = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-transaction-pool = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
substrate-frame-rpc-system = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
engine-rpc = { path = "../pallets/polkadex-engine/rpc" }
engine-runtime-api = { path = "../pallets/polkadex-engine/runtime-api" }
